src/web/css/dashboard.css
/* ... */
#purchaseSummary table td.label{ font-weight: bold; }
#purchaseSummary table td.sum{ text-align: right; font-weight: bold; }
#purchaseSummary table tr.total { border-top: 3px solid #bdbdbd; color: #333333;  } 
#purchaseSummary table tr.total td.label{ font-size:24px; font-weight: bold;  }
#purchaseSummary table tr.total td.sum{ font-size:24px; font-weight: bold;  }
 

.submissionDetails label{ font-size: 14px; font-weight: bold; color: #333333; }
.submissionDetails .submissionDetailsContent{ margin: 7px 0; color: #686868; }

a.downloadSubmission{
	float:left; 
	font-family: "Myriad Pro", Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 24px;
	font-weight: bold;
	color:#FFFFFE;
	text-decoration: none;
	padding: 0 0 0 27px;
	background:url(../images/checkout_download.png) no-repeat left top;
}

a.downloadSubmission span{
	float:left;
	cursor: pointer;
	height: 24px;
	line-height: 24px;
	padding: 0 10px;
	background:url(../images/checkout_download_right.png) no-repeat right top;
}

a.downloadSubmission:hover{
	background:url(../images/checkout_download.png) no-repeat left -24px;
}

a.downloadSubmission:hover span{
	background:url(../images/checkout_download_right.png) no-repeat right -24px;
}

#sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
#sortable li { margin: 0 5px 5px 5px; padding: 5px; font-size: 1.2em; height: 1.5em; }
html>body #sortable li { height: 1.5em; line-height: 1.2em; }
.ui-state-highlight { height: 1.5em; line-height: 1.2em; }

.labelPerPageClear{ margin: 0 0 0 65px; color: #999999; }

#vmLaunch {
	width: 100%;
	display: inline;
}



#vmLaunch .col2 {
line-height: 23px;

}

#vm_image_id {
width: 290px;
}


#user_data {
	width: 287px;
}

.subm {
	width: 100px;
	display: block;
	vertical-align:bottom;
	float: left;
}
p.msg {
	margin-left: 10px;
}
.line {
	margin-bottom: 5px;
}
.line label {
	width: 170px;
}
div.submLine {

	display: inline;
}
#userDataError {
vertical-align: top;
}
.line input {
	display: inline;
	width: 287px;

}
.submBtn {
	left: 0;
	vertical-align:bottom;
}
hr.plain {
 background-color: black;
 margin-bottom:5px;
}

#launchVM {
	float:left;
	left: 5px;
	bottom: 5px;
	margin: 10px;
}

#refreshBtn {
	float: right;
	display: block;
}

.term1 {
	width: 115px;
	margin: auto;
}
.longWordsBreak{
   width:90px;
   display:inline-block;
   word-wrap:break-word;
   overflow:hidden;
}
#swUploadButtonDiv,#uploadButtonDiv{
	padding-left:10px;
}
#swUploadButtonDiv input,#uploadButtonDiv input{
	border:1px solid #C1C1C1;
}
#rContestName{
   word-wrap:break-word;	
}
#swUploadSection, #uploadSection{
	font-size:13px;
}
#swUploadSection textarea, #uploadSection textarea{
	border:1px solid #C1C1C1;
}
#swUploadSection a.button6, #uploadSection a.button6{
	float:none;
	display:inline-block;
}
#swUploadSection #swDocumentList,#uploadSection #documentList{
	margin-bottom:10px;
	font-size:12px;
}

